--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,8 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
-    <string name="title_activity_lista_fragment">ListaFragment</string>
+    <string name="title_activity_lista_fragment">ListaFragment</string>    
+    <string name="another">Another Item</string>
+    <string name="image">Image Item</string>
 
 </resources>
